--- a/Forum/prepros.cfg
+++ b/Forum/prepros.cfg
@@ -381,6 +381,28 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "922e5c09": {
+          "id": "922e5c09",
+          "path": "modify.php",
+          "output": "modify.php",
+          "name": "modify.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "2fccddbe": {
+          "id": "2fccddbe",
+          "path": "ajax.html",
+          "output": "ajax.html",
+          "name": "ajax.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
