--- a/Blog/prepros.cfg
+++ b/Blog/prepros.cfg
@@ -243,6 +243,28 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "9bd2688c": {
+          "id": "9bd2688c",
+          "path": "controlers/feed.php",
+          "output": "controlers/feed.php",
+          "name": "feed.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "3106cc25": {
+          "id": "3106cc25",
+          "path": "feed.php",
+          "output": "feed.php",
+          "name": "feed.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
